<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/top_image"
        android:src="@drawable/loginimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center"
        android:text="@string/welcome_login"
        android:textColor="@color/dark_sea_blue_200"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/fill_in_all_fields_to_login"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email_input_hint"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInput"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_extrabold"
        android:padding="12dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/donthaveaccount"
        tools:layout_editor_absoluteX="20dp" />
    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donthaveaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/if_you_dont_have_an_account_yet_click"
        android:textColor="@color/dark_sea_blue_200"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>