<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homepage.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/profileimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/my_profile"
        android:textColor="@color/dark_sea_blue_200"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/email"
        android:textColor="@color/dark_sea_blue_200"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:alpha="0.5"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/version"
        app:layout_constraintBottom_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/dark_sea_blue_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingVertical="10dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:elevation="10dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/github"
                android:textColor="@color/dark_sea_blue_200" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:alpha="0.5"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:elevation="10dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        tools:layout_editor_absoluteX="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/help" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Uygulamayı paylaşabilirsin"
                android:textColor="@color/dark_sea_blue_200" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>