<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailpage.DetailPage">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/detailShimmer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <include layout="@layout/shimmer_detail_page" />
        </RelativeLayout>


    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/coinNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/bitcoin"
                android:textColor="@color/dark_sea_blue_200"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/coinImageDetail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/crypto"
                app:layout_constraintBottom_toBottomOf="@+id/coinCurrentPriceDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/coinNameDetail" />

            <TextView
                android:id="@+id/coinCurrentPriceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:text="44.9587$"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/current_price"
                android:textColor="@color/dark_sea_blue_200"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/coinNameDetail"
                app:layout_constraintTop_toBottomOf="@+id/coinNameDetail" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:background="@color/background"
                app:layout_constraintTop_toBottomOf="@+id/coinCurrentPriceDetail"
                tools:layout_editor_absoluteX="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/dark_sea_blue_200"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:layout_editor_absoluteX="20dp"
                >
                <TextView
                    android:id="@+id/addFavBtnText"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Favorilere Ekle"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_extrabold"
                    />
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:background="@color/background"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:layout_editor_absoluteX="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Açıklama"
                        android:textColor="@color/dark_sea_blue_200" />

                    <TextView
                        android:id="@+id/coinDecsDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/lorem"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/changeTextLines"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_sea_blue_200"
                        android:text="@string/see_all"
                        android:fontFamily="@font/poppins_regular"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:alpha="0.5"
                android:background="@color/background"
                app:layout_constraintTop_toBottomOf="@+id/cardView3"
                tools:layout_editor_absoluteX="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:layout_editor_absoluteX="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Hashing Algoritması"
                        android:textColor="@color/dark_sea_blue_200" />

                    <TextView
                        android:id="@+id/coinHashDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="SHA-256"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:alpha="0.5"
                android:background="@color/background"
                app:layout_constraintTop_toBottomOf="@+id/cardView4"
                tools:layout_editor_absoluteX="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                tools:layout_editor_absoluteX="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Son 24 Saatte Değişim"
                        android:textColor="@color/dark_sea_blue_200" />

                    <TextView
                        android:id="@+id/coinHourChange24Detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_extrabold"
                        android:text="23.456 %"
                        android:textColor="@android:color/holo_green_light" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:alpha="0.5"
                android:background="@color/background"
                app:layout_constraintTop_toBottomOf="@+id/cardView5"
                tools:layout_editor_absoluteX="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                tools:layout_editor_absoluteX="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Yenileme Süresi"
                        android:textColor="@color/dark_sea_blue_200" />

                    <TextView
                        android:id="@+id/refreshTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="10sn"
                        android:textColor="@color/black" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_button_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:checkedButton="@+id/tenSecond"
                        app:singleSelection="true">>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/tenSecond"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_extrabold"
                            android:text="10sn"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/thirtySecond"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_extrabold"
                            android:text="30sn"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/sixtySecond"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_extrabold"
                            android:text="60sn"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>